design-fix: sizing of form on mobile

--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,7 @@ li {
 }
 .navbar .navbar-links {
   text-align: right;
+  display: flex;
 }
 .navbar img {
   height: 50px;
@@ -203,6 +204,8 @@ li {
 .form-title {
   display: flex;
   flex-direction: column;
+  margin-bottom: 2rem;
+  font-size: 2.5rem !important;
 }
 
 .contact-button {
@@ -252,14 +255,11 @@ li {
   }
 }
 .form {
-  padding: 1rem;
+  padding: 2rem;
   box-sizing: border-box;
   background-color: white;
   width: 40%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   box-shadow: var(--hard-shadow);
 }
 .form input,
@@ -281,7 +281,7 @@ li {
 }
 .form textarea {
   resize: none;
-  height: 10rem;
+  height: 7rem;
 }
 .form textarea::-webkit-scrollbar {
   width: 2px;
@@ -307,15 +307,15 @@ li {
 .form .form-row {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 .form #close {
   position: absolute;
   right: 1rem;
+  top: 1rem;
 }
 .form .form-button {
   border-radius: 2px;
-  padding: 1rem 1.25rem;
   background-color: white;
   font-size: 1.5rem;
   width: fit-content;
@@ -369,7 +369,7 @@ li {
     transform: translateX(-100%);
   }
   to {
-    transform: translateX(0%);
+    transform: translateX(-5%);
   }
 }
 @keyframes out {
@@ -380,6 +380,7 @@ li {
     transform: translateX(-105%);
   }
 }
+
 .draw {
   stroke: black;
   stroke-width: 2px;
@@ -457,21 +458,20 @@ li {
   .navbar .navbar-links {
     opacity: 0;
     display: flex;
-    text-align: right;
     position: absolute;
     border-top: 1px solid black;
-    justify-content: space-around;
+    justify-content: space-between;
     top: 100%;
-    flex-direction: column;
     padding: 1rem;
     right: 0;
-    height: 30vh;
-    width: 50vw;
+    width: 100%;
+    box-sizing: border-box;
     background-color: white;
     border-radius: 0px 0px 2px 2px;
   }
+
   .navbar .navbar-links a {
-    font-size: 2rem;
+    font-size: 1rem;
     margin: 0;
   }
   .navbar #mobile-menu {
